--- a/styles.css
+++ b/styles.css
@@ -23,51 +23,81 @@ a {
 }
 
 nav {
-	position: fixed;
-	text-align: right;
-	width: 100%;
 	background-color: #00FA9A;
 	opacity: .9;
+	position: fixed;
+	width: 100%;
+	height: 10vh;
+	display: flex;
 }
 
 nav a {
-	padding: 20px 50px;
-	display: inline-block;
+	flex: 1;
+	margin: auto 0;
 	color: #008080;
 }
 
 img {
-	padding: 50px;
+	padding: 20px;
 }
 
 .project {
-	display: inline-block;
 	border: 1px solid black;
 }
 
-.profile-link {
-	margin: 50px;
-}
-
 #about {
-	padding-top: 20vh;
+	padding-top: 30vh;
 	height: 80vh;
 	background-color: #00FA9A;
 }
 
 #project-container {
 	display: grid;
-	grid-template-columns: auto auto auto;
-	grid-template-rows: 30vh 30vh;
+	grid-template-columns: repeat(1, auto);
+	grid-gap: 1vh;
 }
 
 #projects {
-	padding: 10vh;
-	height: 80vh;
+	padding: 10vh 0 5vh 0;
 }
 
 #contact {
 	padding: 10vh;
 	height: 80vh;
 	background-color: #B0E0E6;
+}
+
+@media (min-width: 600px) {
+	#project-container {
+		display: grid;
+		grid-template-columns: repeat(2, auto);
+		grid-gap: 1vh;
+	}
+}
+
+@media (min-width: 900px) {
+	nav {
+		justify-content: end;
+	}
+
+	nav a {
+		flex: 0;
+		padding: 0 80px;
+	}
+
+	#project-container {
+		display: grid;
+		grid-template-columns: repeat(3, auto);
+		grid-template-rows: repeat(2, 35vh);
+		grid-gap: 1vh;
+	}
+
+	#projects {
+		padding: 10vh;
+		height: 80vh;
+	}
+
+	.profile-link {
+		margin: 50px;
+	}
 }
