--- a/styles.css
+++ b/styles.css
@@ -39,17 +39,17 @@ nav a {
 }
 
 img {
-	padding: 20px;
+	padding: 1rem;
 }
 
 .project {
 	border: 2px solid black;
 	min-height: 200px;
-	padding: 2vh 0;
+	overflow: auto;
 }
 
 .project img {
-	width: 60vw;
+	width: 70vw;
 	height: auto;
 }
 
@@ -86,7 +86,7 @@ img {
 	}
 
 	.project img {
-		width: 30vw;
+		width: 35vw;
 	}
 
 	.profile-link {
@@ -107,30 +107,37 @@ img {
 	#project-container {
 		display: grid;
 		grid-template-columns: repeat(3, auto);
-		grid-template-rows: repeat(2, 35vh);
+		grid-template-rows: repeat(2, 40vh);
 		grid-gap: 1vh;
 	}
 
 	#projects {
-		padding: 10vh;
-		min-height: 80vh;
-		height: 80vh;
+		padding: 7vh;
+		min-height: 86vh;
+		height: 86vh;
 	}
 
 	#contact {
-		padding: 10vh;
-		min-height: 80vh;
-		height: 80vh;
+		padding: 7vh;
+		min-height: 86vh;
+		height: 86vh;
+	}
+
+	#contact h2 {
+		padding-bottom: 10vh;
 	}
 
 	.profile-link {
 		margin: 50px;
 	}
 
+	.project {
+		padding: 10px;
+	}
+
 	.project img {
-		width: 20vw;
-		height: auto;
-		max-height: 20vh
+		width: 15vw;
+		max-width: 300px;
 	}
 
 }
