--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,21 +1,19 @@
-* {
-	padding: 0;
-	margin: 0;
-}
-
 body {
   	font-family: 'Open Sans', sans-serif;
   	text-align: center;
 }
 
 h1 {
-	font-size: 50px;
-	padding: 20px;
+	font-size: 3.25rem;
+	padding: 0.5rem;
 }
 
 h2 {
-	font-size: 40px;
-	padding: 20px;
+	font-size: 2.5rem;
+}
+
+h3 {
+	margin: 0;
 }
 
 a {
@@ -39,7 +37,7 @@ nav a {
 }
 
 img {
-	padding: 1rem;
+	margin: 1rem;
 }
 
 #about {
@@ -53,21 +51,17 @@ img {
 	padding: 7vh 0;
 }
 
-#project-container {
-	display: grid;
-	grid-template-columns: repeat(1, auto);
-}
-
 .project {
 	border: 2px solid black;
 	min-height: 200px;
-	overflow: auto;
 	padding: 1.5rem 0;
+	margin: 1rem 0;
 }
 
 .project img {
-	width: 70vw;
+	max-width: 70vw;
 	height: auto;
+	max-height: 50vh;
 }
 
 #contact {
@@ -76,24 +70,42 @@ img {
 	background-color: #B0E0E6;
 }
 
-.profile-link {
-	display: block;
+@media (max-width: 599px) {
+	
+	h1 {
+		font-size: 2.75rem;
+	}
+
+	.profile-link {
+		display: block;
+	}
+	
 }
 
-@media (max-width: 599px) {
-
+@media (max-width: 899px) {
 	
+	#project-container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.project {
+		width: 90vw;
+	}
 
 }
 
 @media (min-width: 600px) and (max-width: 899px) {
 
 	.project img {
-		width: 35vw;
+		max-height: 70vh;
+
 	}
 
 	.profile-link {
 		display: inline-block;
+		margin: 0 1rem;
 	}
 
 }
@@ -101,7 +113,7 @@ img {
 @media (min-width: 900px) {
 
 	nav {
-		justify-content: end;
+		justify-content: flex-end;
 	}
 
 	nav a {
@@ -117,17 +129,13 @@ img {
 
 	#project-container {
 		display: grid;
-		grid-template-columns: repeat(3, auto);
+		grid-template-columns: repeat(3, 1fr);
 		grid-gap: 2vh;
-		margin: 10vh 0;
-	}
-
-	.project {
-		padding: 3rem 0;
 	}
 
 	.project img {
-		width: 20vw;
+		max-width: 20vw;
+		height: 40vh;
 	}
 
 	#contact {
