--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 body {
-  	font-family: 'Open Sans', sans-serif;
+  	font-family: 'Montserrat', sans-serif;
   	text-align: center;
 }
 
@@ -28,6 +30,7 @@ nav {
 	height: 6vh;
 	min-height: 45px;
 	display: flex;
+	z-index: 2000;
 }
 
 nav a {
@@ -55,6 +58,7 @@ img {
 
 .project {
 	border: 2px solid black;
+	display: relative;
 	min-height: 200px;
 	padding: 1.5rem 0;
 	margin: 1rem 0;
@@ -156,6 +160,73 @@ img {
 
 	.profile-link {
 		margin: 50px;
+	}
+
+	.project {
+		position: relative;
+	}	
+
+	.caption {
+		top: 0;
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		color: white;
+		filter: opacity(0%);
+		background: black;
+		z-index: 1000;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-content: center;
+		transition: all .5s;
+	}
+
+	.caption h3 {
+		position: relative;
+		top: -100px;
+		max-width: 80%;
+		margin: 0 auto;
+		padding: 10px;
+		font-size: 20px;
+		transition: all .2s;
+	}
+
+	.icons {
+		min-width: 200px;
+		max-width: 50%;
+		position: relative;
+		margin: 15px auto;
+		font-size: 40px;
+		padding: 10px 20px;
+		display: flex;
+		justify-content: space-around;
+	}
+
+	.icons a {
+		text-decoration: none;
+		color: white;
+	}
+
+	.information {
+		bottom: -100px;
+		transition: all .2s;
+		position: relative;
+
+	}
+
+	.project:hover > .caption {
+		filter: opacity(90%);
+	}
+
+	.project:hover > .caption h3 {
+		filter: opacity(100%);
+		top: 0;
+	}
+	
+	.project:hover > .caption .information {
+		opacity: 1;
+		bottom: 0;
 	}
 
 }
