--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,7 +45,7 @@ img {
 	padding: 0;
 }
 
-#about {
+#home {
 	padding-top: 30vh;
 	height: 70vh;
 	background-color: #00FA9A;
@@ -94,6 +94,31 @@ img {
 }
 
 @media (max-width: 899px) {
+
+	#about {
+		padding-top: 8vh;
+		height: 92vh;
+		background-color: #FAFAD2;
+	}
+
+	#skills {
+		margin: 1rem auto;
+	}
+
+	.skills-header {
+		font-size: 2rem;
+		margin: 3rem;
+	}
+	
+	#skills th, td {
+		padding: 0.25rem 2rem;
+	}
+
+	.about-description {
+		text-align: justify;
+		width: 90%;
+		margin: 0 auto;
+	}
 	
 	#project-container {
 		display: flex;
@@ -103,6 +128,25 @@ img {
 
 	.project {
 		width: 90vw;
+	}
+
+	.project-title {
+		display: none; 
+	}
+
+	.icons {
+		min-width: 200px;
+		max-width: 50%;
+		position: relative;
+		margin: 0 auto;
+		font-size: 40px;
+		padding: 0 20px;
+		display: flex;
+		justify-content: space-around;
+	}
+
+	.icons i {
+		color: black;
 	}
 
 }
@@ -128,7 +172,13 @@ img {
 
 	nav a {
 		flex: 0;
-		padding: 0 80px;
+		padding: 0 50px;
+	}
+
+	#about {
+		padding-top: 20vh;
+		height: 80vh;
+		background-color: #FAFAD2;
 	}
 
 	#projects {
@@ -148,14 +198,27 @@ img {
 		height: 40vh;
 	}
 
-	#contact {
-		padding: 7vh;
-		min-height: 86vh;
-		height: 86vh;
+	.about-description {
+		text-align: justify;
+		width: 50%;
+		margin: 0 auto;
+	}
+
+	#skills {
+		margin: 1rem auto;
+	}
+
+	.skills-header {
+		font-size: 2rem;
+		margin: 3rem;
+	}
+	
+	#skills th, td {
+		padding: 0.25rem 2rem;
 	}
 
 	#contact h2 {
-		padding-bottom: 10vh;
+		padding-bottom: 15vh;
 	}
 
 	.profile-link {
@@ -204,7 +267,6 @@ img {
 	}
 
 	.icons a {
-		text-decoration: none;
 		color: white;
 	}
 
