--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,6 +51,15 @@ img {
 	background-color: #00FA9A;
 }
 
+.about-description {
+	text-align: justify;
+	margin: 0 auto;
+}
+
+#resume {
+	color: black;
+}
+
 #projects {
 	min-height: 86vh;
 	padding: 7vh 0;
@@ -86,6 +95,21 @@ img {
 		margin: 1rem 0 0.5rem 0;
 	}
 
+	.about-description {
+		line-height: 2rem;
+		width: 90%;
+		margin: 4rem auto;
+	}
+
+	#resume {
+		font-size: 2rem;
+		color: black;
+	}
+
+	#skills {
+		display: none;
+	}
+
 	#profile-images {
 		display: flex;
 		flex-direction: column;
@@ -96,28 +120,9 @@ img {
 @media (max-width: 899px) {
 
 	#about {
-		padding-top: 8vh;
-		height: 92vh;
+		padding: 8vh 0;
+		min-height: 92vh;
 		background-color: #FAFAD2;
-	}
-
-	#skills {
-		margin: 1rem auto;
-	}
-
-	.skills-header {
-		font-size: 2rem;
-		margin: 3rem;
-	}
-	
-	#skills th, td {
-		padding: 0.25rem 2rem;
-	}
-
-	.about-description {
-		text-align: justify;
-		width: 90%;
-		margin: 0 auto;
 	}
 	
 	#project-container {
@@ -153,9 +158,30 @@ img {
 
 @media (min-width: 600px) and (max-width: 899px) {
 
+	.about-description {
+		line-height: 1.5rem;
+		width: 90%;
+	}
+	
+	#skills-table {
+		margin: 1rem auto;
+	}
+
+	.skills-header {
+		font-size: 2rem;
+		margin: 2rem;
+	}
+	
+	#skills-table th, td {
+		padding: 0.25rem 2rem;
+	}
+
+	#resume {
+		font-size: 1.5rem;
+	}
+
 	.project img {
 		max-height: 70vh;
-
 	}
 
 	.profile-link {
@@ -176,8 +202,8 @@ img {
 	}
 
 	#about {
-		padding-top: 20vh;
-		height: 80vh;
+		padding-top: 15vh;
+		height: 85vh;
 		background-color: #FAFAD2;
 	}
 
@@ -199,13 +225,14 @@ img {
 	}
 
 	.about-description {
-		text-align: justify;
+		line-height: 2rem;
+		font-size: 1.25rem;
 		width: 50%;
-		margin: 0 auto;
 	}
 
-	#skills {
+	#skills-table {
 		margin: 1rem auto;
+		padding-bottom: 4rem;
 	}
 
 	.skills-header {
@@ -213,8 +240,13 @@ img {
 		margin: 3rem;
 	}
 	
-	#skills th, td {
+	#skills-table th, td {
 		padding: 0.25rem 2rem;
+	}
+
+	#resume {
+		font-size: 2rem;
+		color: black;
 	}
 
 	#contact h2 {
